tests/snapshots/integration__integration_tests__help__help_page_switch.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - switch
    - "--help-page"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    RUST_LOG: warn
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
---
success: true
exit_code: 0
----- stdout -----
<!-- ⚠️ AUTO-GENERATED from `wt switch --help-page` — edit cli.rs to update -->

Change directory to a worktree, creating one if needed.

<figure class="demo">
<picture>
  <source srcset="/assets/docs/dark/wt-switch.gif" media="(prefers-color-scheme: dark)">
  <img src="/assets/docs/light/wt-switch.gif" alt="wt switch demo" width="1600" height="900">
</picture>
</figure>

Worktrees are addressed by branch name; paths are computed from a template. Unlike `git switch`, this navigates between worktrees rather than changing branches in place.

## Examples

```bash
wt switch feature-auth           # Switch to worktree
wt switch -                      # Previous worktree (like cd -)
wt switch --create new-feature   # Create new branch and worktree
wt switch --create hotfix --base production
```

## Creating a branch

The `--create` flag creates a new branch from the `--base` branch (defaults to default branch). Without `--create`, the branch must already exist.

## Creating worktrees

If the branch already has a worktree, `wt switch` changes directories to it. Otherwise, it creates one, running [hooks](@/hook.md).

When creating a worktree, worktrunk:

1. Creates worktree at configured path (see below)
2. Switches to new directory
3. Runs [post-create hooks](@/hook.md#post-create) (blocking)
4. Spawns [post-start hooks](@/hook.md#post-start) (background)

## Worktree placement

By default, worktrees are placed in sibling directories based on the `worktree-path` template. When `global-worktree-dir` is configured, new worktrees are placed there instead using `{project}.{branch}` naming:

```toml
# ~/.config/worktrunk/config.toml
global-worktree-dir = "~/worktrees"
```

This creates worktrees like `~/worktrees/myrepo.feature-auth`.

```bash
wt switch feature                        # Existing branch → creates worktree
wt switch --create feature               # New branch and worktree
wt switch --create fix --base release    # New branch from release
wt switch --create temp --no-verify      # Skip hooks
```

## Shortcuts

| Shortcut | Meaning |
|----------|---------|
| `^` | Default branch (main/master) |
| `@` | Current branch/worktree |
| `-` | Previous worktree (like `cd -`) |

```bash
wt switch -                      # Back to previous
wt switch ^                      # Default branch worktree
wt switch --create fix --base=@  # Branch from current HEAD
```

## When wt switch fails

- **Branch doesn't exist** — Use `--create`, or check `wt list --branches`
- **Path occupied** — Another worktree is at the target path; switch to it or remove it
- **Stale directory** — Use `--clobber` to remove a non-worktree directory at the target path

To change which branch a worktree is on, use `git switch` inside that worktree.

## See also

- [wt select](@/select.md) — Interactive worktree selection
- [wt list](@/list.md) — View all worktrees
- [wt remove](@/remove.md) — Delete worktrees when done
- [wt merge](@/merge.md) — Integrate changes back to the default branch

## Command reference

```
wt switch - Switch to a worktree

Usage: [1m[36mwt switch[0m [36m[OPTIONS][0m [36m<BRANCH>[0m [1m[36m[--[0m [36m<EXECUTE_ARGS>...[0m[1m[36m][0m

[1m[32mArguments:[0m
  [36m<BRANCH>[0m
          Branch name[0m
          [0m
          Shortcuts: '^' (default branch), '-' (previous), '@' (current)[0m

  [36m[EXECUTE_ARGS]...[0m
          Additional arguments for --execute command (after --)[0m
          [0m
          Arguments after [1m--[0m are appended to the execute command. Each argument
          is POSIX shell-escaped before appending.[0m

[1m[32mOptions:[0m
  [1m[36m-c[0m, [1m[36m--create[0m
          Create a new branch

  [1m[36m-b[0m, [1m[36m--base[0m[36m [0m[36m<BASE>[0m
          Base branch[0m
          [0m
          Defaults to default branch.[0m

  [1m[36m-x[0m, [1m[36m--execute[0m[36m [0m[36m<EXECUTE>[0m
          Command to run after switch[0m
          [0m
          Replaces the wt process with the command after switching, giving it
          full terminal control. Useful for launching editors, AI agents, or
          other interactive tools.[0m
          [0m
          Especially useful with shell aliases:[0m
          [0m
            [1m[1malias wsc='wt switch --create -x claude'[0m
            [1mwsc feature-branch -- 'Fix GH #322'[0m
          [0m[0m
          Then [1mwsc feature-branch[0m creates the worktree and launches Claude Code.
          Arguments after [1m--[0m are passed to the command, so [1mwsc feature -- 'Fix
          GH #322'[0m runs [1mclaude 'Fix GH #322'[0m, starting Claude with a prompt.[0m

  [1m[36m-y[0m, [1m[36m--yes[0m
          Skip approval prompts

      [1m[36m--clobber[0m
          Remove stale paths at target

      [1m[36m--no-verify[0m
          Skip hooks

  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m
          Show commands and debug info
```

<!-- END AUTO-GENERATED from `wt switch --help-page` -->

----- stderr -----
