tests/snapshots/integration__integration_tests__help__help_push_long.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - push
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    LANG: C
    LC_ALL: C
    LLVM_PROFILE_FILE: "[LLVM_PROFILE_FILE]"
    TERM: alacritty
    WORKTRUNK_APPROVALS_PATH: "[TEST_APPROVALS]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_SYSTEM_CONFIG_PATH: "[TEST_SYSTEM_CONFIG]"
    WORKTRUNK_TEST_BASH_INSTALLED: "0"
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_CODEX_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_FISH_INSTALLED: "0"
    WORKTRUNK_TEST_GEMINI_INSTALLED: "0"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_PARENT_SHELL: ""
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_POWERSHELL_INSTALLED: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WORKTRUNK_TEST_ZSH_INSTALLED: "0"
---
success: true
exit_code: 0
----- stdout -----
wt push - Push a linked worktree branch to its remote[0m

Resolves the branch's existing linked worktree and Git push metadata. The optional remote overrides that metadata. Unlike [1mwt step push[0m, this publishes to a remote and never updates a local target branch.[0m

Usage: [1m[36mwt push[0m [36m[OPTIONS][0m [36m<BRANCH>[0m [36m[REMOTE][0m

[1m[32mArguments:[0m
  [36m<BRANCH>[0m
          Branch with a linked worktree

  [36m[REMOTE][0m
          Remote name (defaults to Git push metadata or the configured primary remote)

[1m[32mOptions:[0m
      [1m[36m--dry-run[0m
          Preview the push without changing refs

  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

      [1m[36m--config-set[0m[36m [0m[36m<toml>[0m
          Override config with inline TOML, e.g. --config-set list.full=true (repeatable)

  [1m[36m-v[0m, [1m[36m--verbose[0m[36m...[0m
          Verbose output (-v: info logs + hook/alias template variables on stderr; -vv: also debug logs and raw subprocess output written to .git/wt/logs/). Set WORKTRUNK_VERBOSE=0|1|2 to apply the same level everywhere — including shell completion, which no flag can reach

  [1m[36m-y[0m, [1m[36m--yes[0m
          Skip approval prompts

[1m[32mExamples[0m

Push using the branch's Git push metadata:

[107m [0m [2m[0m[2m[34mwt[0m[2m push feature-auth[0m
[107m [0m [2m[0m[2m[34m◎[0m[2m Pushing feature-auth to origin @ ~/repo.feature-auth[0m
[107m [0m [2m[0m[2m[34m✓[0m[2m Pushed feature-auth to origin @ ~/repo.feature-auth[0m

Override the remote:

[107m [0m [2m[0m[2m[34mwt[0m[2m push feature-auth origin[0m

Preview without updating remote refs:

[107m [0m [2m[0m[2m[34mwt[0m[2m push feature-auth [0m[2m[36m--dry-run[0m
[107m [0m [2m[0m[2m[34m○[0m[2m Would push feature-auth to origin @ ~/repo.feature-auth[0m

The branch must already have a linked worktree. The omitted remote is resolved
from [2mbranch.<name>.pushRemote[0m, [2mremote.pushDefault[0m, the tracking remote, then
configured [2morigin[0m, [2mcheckout.defaultRemote[0m, or the first configured remote.

----- stderr -----
